# wthr

./: .gitignore  CHANGELOG.md  LICENSE  fourmolu.toml  wthr.cabal
app/: Main.hs
app/Wthr/: Geo.hs
src/: Main.hs
src/Wthr/: Error.hs  Geo.hs  Http.hs  PrettyPrint.hs  Weather.hs
