cabal-version:      2.4
name:               wthr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hammsvietro
maintainer:         hammsvietro@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wthr
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Wthr.Geo
      Wthr.Weather

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0

                    , aeson ^>= 2.2.0.0
                    , bytestring ^>= 0.11.5.0
                    , conduit ^>= 1.3.5
                    , http-conduit ^>= 2.3.8.3
                    , text
    hs-source-dirs:   app
    extensions:       OverloadedStrings
    default-language: Haskell2010
