cabal-version:      2.4
name:               wthr
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/hammsvietro/wthr#readme
author:             Hamms Vietro
maintainer:         hammsvietro@gmail.com
copyright:          2023 Hamms Vietro
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable wthr
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Wthr.Geo
    Wthr.Weather

  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , conduit
    , http-conduit
    , text
    , time

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
